--- a/index.html
+++ b/index.html
@@ -18,8 +18,10 @@
         <br>
         <p>The next card will be...</p>
         <div>
-            <input type="button" class="higherButton" onclick="submitGuess('Higher')" value="Higher">&emsp; &emsp;
+            <br>
+            <input type="button" class="higherButton" onclick="submitGuess('Higher')" value="Higher">&emsp;&emsp;
             <input type="button" class="lowerButton" onclick="submitGuess('Lower')" value="Lower">
+            <br>
         </div>
         <br>
         <p id="result">You were:</p>
@@ -27,9 +29,9 @@
         <br>
         <input type="button" class="restButton" onclick="location.href='index.html';" value="Rest">
         <div class="bottomBox">
-            <p>Instructions:</p>
+            Instructions:
         </div>
-    </div>
+     </div>
 </body>
 <script src="main.js" defer></script>
 </html>
