--- a/index.html
+++ b/index.html
@@ -10,13 +10,14 @@
 </head>
 
 <body>
-    <div class="container">
+
+    <div class="container" id="img">
         <header>Higher/Lower Game</header>
         <h3>Current Card</h3>
         <br>
         <div id="Hand"></div>
         <br>
-        <p>The next card will be...</p>
+        <p class="theNext">The next card will be...</p>
         <div>
             <input type="button" class="higherButton" onclick="submitGuess('Higher')" value="Higher">&emsp;&emsp;
             <input type="button" class="lowerButton" onclick="submitGuess('Lower')" value="Lower">
@@ -25,9 +26,10 @@
         <p id="result">You were:</p>
         <p id="score">You've got 0/0 corrrect.</p>
         <br>
-        <input type="button" class="restButton" onclick="location.href='index.html';" value="Rest">
+        <input type="button" class="restButton" onclick="location.href='index.html';" value="- Rest -">
         <div class="bottomBox">
-            Instructions:
+            <p>Instructions: Guess if the next card is higher or lower.
+                Game ends when 51 cards are played if you get more correct you win... Good luck!</p>
         </div>
     </div>
 </body>
