--- a/index.html
+++ b/index.html
@@ -23,16 +23,21 @@
             <input type="button" class="lowerButton" onclick="submitGuess('Lower')" value="Lower">
             <br>
         </div>
+
+        <div><!-- new div -->
         <p id="result">You were:</p>
         <p id="score">You've got 0/0 corrrect.</p>
-        <br>
-        <input type="button" class="restButton" onclick="location.href='index.html';" value="- Rest -">
+        </div>
+        <div><!-- new div -->
+        <input type="button" class="restButton" onclick="location.href='index.html';" value="Reset">
+        </div>
         <div class="bottomBox">
             <p>Instructions: Guess if the next card is higher or lower.
-                Game ends when 51 cards are played if you get more correct you win... Good luck!</p>
+                Game ends when 51 cards are played and if you get more correct you win... Good luck!</p>
         </div>
+
     </div>
+    <script src="main.js"></script>
 </body>
-<script src="main.js" defer></script>
 
 </html>
