Added more Styles

--- a/index.html
+++ b/index.html
@@ -13,15 +13,15 @@
     <div class="container" id="img">
         <header>Higher/Lower Game</header>
         <h3>Current Card</h3>
-        <br>
+        
         <div id="Hand"></div>
-        <br>
-        <p class="theNext">The next card will be...</p>
+        
+        <div class="theNext">The next card will be...</div>
         <div>
             <input type="button" class="higherButton" onclick="submitGuess('Higher')" value="Higher">&emsp;&emsp;
             <input type="button" class="lowerButton" onclick="submitGuess('Lower')" value="Lower">
         </div>
-        <div>
+        <div class="resultScore">
             <p id="result">You were:</p>&emsp;
             <p id="score">You've got 0/0 corrrect.</p>
         </div>
