Added more styles

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <input type="button" class="lowerButton" onclick="submitGuess('Lower')" value="Lower">
         </div>
         <div class="resultScore">
-            <p id="result">You were:</p>&emsp;
+            <p id="result">You were:</p> &#45;&#58;&#45;
             <p id="score">You've got 0/0 corrrect.</p>
         </div>
         <div>
